--- a/index.ipynb
+++ b/index.ipynb
@@ -336,15 +336,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "def distance(first_neighbor, second_neighbor):\n",
-    "    sqrt(17)"
+    "    return sqrt(17)"
    ]
   },
   {
