--- a/index.ipynb
+++ b/index.ipynb
@@ -429,22 +429,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "unindent does not match any outer indentation level (<ipython-input-19-7a7b51804d47>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-19-7a7b51804d47>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    distance = math.sqrt(distance_between_neighbors_squared(first_neighbor, second_neighbor))\u001b[0m\n\u001b[0m                                                                                             ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
-    "        neighbor_with_distance = second_neighbor.copy()\n",
+    "    neighbor_with_distance = second_neighbor.copy()\n",
     "    distance = math.sqrt(distance_between_neighbors_squared(first_neighbor, second_neighbor))\n",
     "    neighbor_with_distance['distance'] = distance\n",
     "    return neighbor_with_distance"
@@ -452,11 +443,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "distance_with_neighbor(fred, natalie)\n",
     "# {'avenue': 5, 'distance': 4.123105625617661, 'name': 'Natalie', 'street': 4}"
